[project]
name = "gradio-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.25.2",
    "langchain>=0.3.24",
    "langchain-anthropic>=0.3.12",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.3",
    "langchain-openai>=0.3.14",
    "python-dotenv>=1.1.0",
]
